--- a/source/_data/footer.njk
+++ b/source/_data/footer.njk
@@ -1,1 +1,1 @@
-<div><a href="https://www.upyun.com/" target="_blank" title="upyun"><img src="https://st.blackyau.net/blog/file/upyun_logo.svg" alt="upyun"></a></div>
+<div class="powered-by">本网站由 <a style="border-bottom: none;"href="https://www.upyun.com/" class="theme-link" rel="noopener" target="_blank" title="upyun"><img style="display: inline; vertical-align: middle;" src="https://st.blackyau.net/blog/file/upyun_dark.svg" alt="upyun"></a> 提供云储存服务</div>
